Home page animation and contact page

--- a/nde-site/src/index.css
+++ b/nde-site/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
+
 body {
   @apply m-0 bg-primary text-text font-serif;
   -webkit-font-smoothing: antialiased;
