--- a/nde-site/src/index.css
+++ b/nde-site/src/index.css
@@ -11,6 +11,7 @@ body {
   @apply m-0 bg-primary text-text font-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 code {
